Adding a EFC/CategoryBunndle and turning off the app_dev.php security check on IP

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+efc_category:
+    resource: "@EFCCategoryBundle/Resources/config/routing.yml"
+    prefix:   /
+
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
