--- a/etc/docker/Dockerfile_php
+++ b/etc/docker/Dockerfile_php
@@ -19,8 +19,8 @@ RUN apt-get update && apt-get install -my \
   php-redis \
   php-opcache
 RUN mkdir /run/php
-ADD conf/www.conf /etc/php/7.1/fpm/pool.d/www.conf
-ADD conf/php-fpm.conf /etc/php/7.1/fpm/php-fpm.conf
+ADD /etc/php/conf/www.conf /etc/php/7.1/fpm/pool.d/www.conf
+ADD /etc/php/conf/php-fpm.conf /etc/php/7.1/fpm/php-fpm.conf
 RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
 RUN php composer-setup.php
 RUN php -r "unlink('composer-setup.php');"
