--- a/etc/docker/Dockerfile_nginx
+++ b/etc/docker/Dockerfile_nginx
@@ -1,5 +1,5 @@
 FROM debian:stretch
-RUN apt-get update œœ apt-get install -y nginx vim
+RUN apt-get update && apt-get install -y nginx vim
 
 COPY /etc/nginx/nginx.conf /etc/nginx/nginx.conf
 ADD /etc/nginx/sites-enabled /etc/nginx/sites-enabled
