Updating fpmphp dockerfile

--- a/etc/docker/Dockerfile_php
+++ b/etc/docker/Dockerfile_php
@@ -31,7 +31,12 @@ WORKDIR /var/www/symfony
 EXPOSE 9000
 
 ADD composer.json /var/www/symfony/composer.json
+RUN chown www-data:www-data /var/www/symfony/composer.json
+
 ADD composer.lock /var/www/symfony/composer.lock
+RUN chown www-data:www-data /var/www/symfony/composer.lock
+
 ADD phpunit.xml.dist /var/www/symfony/phpunit.xml.dist
+RUN chown www-data:www-data /var/www/symfony/phpunit.xml.dist
 
 CMD ["php-fpm7.1"]
