--- a/etc/docker/Dockerfile_php
+++ b/etc/docker/Dockerfile_php
@@ -32,11 +32,14 @@ EXPOSE 9000
 
 ADD composer.json /var/www/symfony/composer.json
 RUN chown www-data:www-data /var/www/symfony/composer.json
+RUN chmod 755 /var/www/symfony/composer.json
 
 ADD composer.lock /var/www/symfony/composer.lock
 RUN chown www-data:www-data /var/www/symfony/composer.lock
+RUN chmod 755 /var/www/symfony/composer.lock
 
 ADD phpunit.xml.dist /var/www/symfony/phpunit.xml.dist
 RUN chown www-data:www-data /var/www/symfony/phpunit.xml.dist
+RUN chmod 755 /var/www/symfony/phpunit.xml.dist
 
 CMD ["php-fpm7.1"]
