--- a/src/Efc/CatalogueBundle/Resources/config/routing.yml
+++ b/src/Efc/CatalogueBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-efc_catalogue_homepage:
+efc_catalogue_list:
     path:     /
-    defaults: { _controller: EfcCatalogueBundle:Default:index }
+    defaults: { _controller: EfcCatalogueBundle:Default:list }
