--- a/etc/docker/docker-compose.yml
+++ b/etc/docker/docker-compose.yml
@@ -35,15 +35,20 @@ services:
       - symfony_var:/var/www/symfony/var:cached
       - symfony_vendor:/var/www/symfony/vendor:cached
   mysql:
-    image: mysql/mysql-server:latest
+    image: mysql:5.6
     environment:
-      - MYSQL_DATABASE=symfony
       - MYSQL_ROOT_PASSWORD=changeIt
+      - MYSQL_ALLOW_EMPTY_PASSWORD=false
     ports:
       - "3307:3306"
     volumes:
       - symfony_mysql:/var/lib/mysql
+      - ../mysql:/docker-entrypoint-initdb.d
 volumes:
   symfony_mysql:
   symfony_vendor:
   symfony_var:
+networks:
+  default:
+    external:
+      name: symfony_dev
